--- a/appspec.yml
+++ b/appspec.yml
@@ -3,3 +3,8 @@ os: linux
 files:
   - source: /
     destination: /var/www/html/Fixer
+hooks:
+  AfterInstall:
+    - location: scripts/deploy_app.sh
+      timeout: 300
+      runas: root
