Updating to run unit tests via CirclCI

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,6 +14,11 @@ jobs:
     # See: https://circleci.com/docs/2.0/configuration-reference/#steps
     steps:
       - checkout
+      - python/install-packages:
+          pkg-manager: pip
+      - run:
+        name: install dependencies
+        command: pip3 install boto3
       - run:
           name: "Run python tests"
           command: python3 -m unittest CategoryDatabaseUT.py
