--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,8 +16,9 @@ jobs:
       - checkout
       - run:
           name: install dependencies
-          command: sudo apt install python3-pip
-          command: pip3 install boto3
+          command: |
+            sudo apt install python3-pip
+            pip3 install boto3
       - run:
           name: "Run python tests"
           command: python3 -m unittest CategoryDatabaseUT.py
