--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,7 +20,9 @@ jobs:
             pip install boto3
       - run:
           name: "Run python tests"
-          command: python3 -m unittest CategoryDatabaseUT.py
+          command: |
+            python3 -m unittest CategoryDatabaseUT.py
+            python3 -m unittest ItemDatabaseUT.py
 
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
