--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -4,6 +4,7 @@ on: [push]
 
 jobs:
   build:
+    runs-on: ubuntu-latest
     steps:
       - name: Code Coverage Report
       uses: romeovs/lcov-reporter-action@v0.2.11
