--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -14,6 +14,8 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: ${{ matrix.python-version }}
+    - name: Code Coverage Report
+      uses: romeovs/lcov-reporter-action@v0.2.11
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
